unpackaged/main/default/objects/Plant__c/fields/AC_Capacity_Quoted__c.field-meta.xml
<CustomField>
    <fullName>AC_Capacity_Quoted__c</fullName>
    <label>Quoted AC Capacity (MW)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>