unpackaged/main/default/objects/Plant__c/fields/Addresses__c.field-meta.xml
<CustomField>
    <fullName>Addresses__c</fullName>
    <formula>Street__c   + &quot;  &quot; +  City__c   + &quot;  &quot; +  Zip_Postal_Code__c</formula>
    <label>Addresses</label>
    <type>Text</type>
</CustomField>