unpackaged/main/default/objects/Plant__c/fields/Asset_Subtype__c.field-meta.xml
<CustomField>
    <fullName>Asset_Subtype__c</fullName>
    <label>Asset Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Onshore</fullName>
            </value>
            <value>
                <fullName>Offshore</fullName>
            </value>
            <value>
                <fullName>Ground Mount</fullName>
            </value>
            <value>
                <fullName>Rooftop</fullName>
            </value>
            <value>
                <fullName>Canopy</fullName>
            </value>
            <value>
                <fullName>Floating</fullName>
            </value>
            <value>
                <fullName>Decentralized)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>