unpackaged/main/default/objects/Plant__c/fields/Competitor_Operator__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Operator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plants (Competitor Operator)</relationshipLabel>
    <relationshipName>Plants1</relationshipName>
    <type>Lookup</type>
</CustomField>