unpackaged/main/default/objects/Plant__c/fields/Competitor_Owner__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Competitor Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Id</field>
            <operation>equals</operation>
            <valueField>Account.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plants</relationshipLabel>
    <relationshipName>Plants</relationshipName>
    <type>Lookup</type>
</CustomField>