unpackaged/main/default/objects/Plant__c/fields/Expected_Commercial_Operation_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Commercial_Operation_Date__c</fullName>
    <label>Expected Commercial Operation Date</label>
    <type>Date</type>
</CustomField>