unpackaged/main/default/objects/Plant__c/fields/GPS_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>GPS_Coordinates__c</fullName>
    <label>GPS Coordinates</label>
    <length>20</length>
    <type>Text</type>
</CustomField>