unpackaged/main/default/objects/Plant__c/fields/Longitude__c.field-meta.xml
<CustomField>
    <fullName>Longitude__c</fullName>
    <label>Longitude</label>
    <length>30</length>
    <type>Text</type>
</CustomField>