unpackaged/main/default/objects/Plant__c/fields/Majority_Offtake__c.field-meta.xml
<CustomField>
    <fullName>Majority_Offtake__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Majority Offtake</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plants (Majority Offtake)</relationshipLabel>
    <relationshipName>Plants3</relationshipName>
    <type>Lookup</type>
</CustomField>