unpackaged/main/default/objects/Plant__c/fields/Megawatt_AC__c.field-meta.xml
<CustomField>
    <fullName>Megawatt_AC__c</fullName>
    <label>Megawatt AC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>