unpackaged/main/default/objects/Plant__c/fields/Megawatt_DC__c.field-meta.xml
<CustomField>
    <fullName>Megawatt_DC__c</fullName>
    <label>Megawatt DC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>