unpackaged/main/default/objects/Plant__c/fields/MW_Energy_Capacity_MWh__c.field-meta.xml
<CustomField>
    <fullName>MW_Energy_Capacity_MWh__c</fullName>
    <label>MW Energy Capacity (MWh)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>