unpackaged/main/default/objects/Plant__c/fields/MWp__c.field-meta.xml
<CustomField>
    <fullName>MWp__c</fullName>
    <formula>CASE(Asset_Class__c,
&quot;Solar&quot;,
	IF(ISBLANK( Megawatt_DC__c ), DC_Capacity_Quoted__c , Megawatt_DC__c),
&quot;Wind&quot;,
	IF(ISBLANK( Megawatt_AC__c ), AC_Capacity_Quoted__c , Megawatt_AC__c),
&quot;Hydro&quot;,
	IF(ISBLANK( Megawatt_AC__c ), AC_Capacity_Quoted__c , Megawatt_AC__c),
&quot;Storage&quot;,
	IF(ISBLANK( Megawatt_DC__c ), DC_Capacity_Quoted__c , Megawatt_DC__c),
&quot;Other Renewable&quot;,
	IF(ISBLANK( Megawatt_AC__c ), AC_Capacity_Quoted__c , Megawatt_AC__c),
NULL)</formula>
    <label>MWp</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>