unpackaged/main/default/objects/Plant__c/fields/Number_of_Devices__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Devices__c</fullName>
    <label>Number of Devices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>