unpackaged/main/default/objects/Plant__c/fields/Number_of_Turbines__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Turbines__c</fullName>
    <label>Number of Turbines</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>