unpackaged/main/default/objects/Plant__c/fields/OEM__c.field-meta.xml
<CustomField>
    <fullName>OEM__c</fullName>
    <description>Greenbyte OEM field</description>
    <label>OEM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>