unpackaged/main/default/objects/Plant__c/fields/Operational_Status__c.field-meta.xml
<CustomField>
    <fullName>Operational_Status__c</fullName>
    <label>Operational Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Commissioning</fullName>
            </value>
            <value>
                <fullName>Operation (Energy Export)</fullName>
            </value>
            <value>
                <fullName>Out of Service</fullName>
            </value>
            <value>
                <fullName>Decommissioned</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Split</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Placeholder/Dummy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>