unpackaged/main/default/objects/Plant__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Operator</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Plants (Operator)</relationshipLabel>
    <relationshipName>Plants2</relationshipName>
    <type>Lookup</type>
</CustomField>