unpackaged/main/default/objects/Plant__c/fields/PF_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>PF_Legacy_ID__c</fullName>
    <externalId>true</externalId>
    <label>PF Legacy ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>