unpackaged/main/default/objects/Plant__c/fields/Plant_Name__c.field-meta.xml
<CustomField>
    <fullName>Plant_Name__c</fullName>
    <label>Plant Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>