unpackaged/main/default/objects/Plant__c/fields/Plant_Number__c.field-meta.xml
<CustomField>
    <fullName>Plant_Number__c</fullName>
    <displayFormat>A-{0000}</displayFormat>
    <label>Plant Number</label>
    <type>AutoNumber</type>
</CustomField>