unpackaged/main/default/objects/Plant__c/fields/Regulatory_Plant_Id__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Plant_Id__c</fullName>
    <label>Regulatory Plant Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>