unpackaged/main/default/objects/Plant__c/fields/Replaced_by_1__c.field-meta.xml
<CustomField>
    <fullName>Replaced_by_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replaced by 1</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Plants</relationshipLabel>
    <relationshipName>Plants</relationshipName>
    <type>Lookup</type>
</CustomField>