unpackaged/main/default/objects/Plant__c/fields/Replaced_by_2__c.field-meta.xml
<CustomField>
    <fullName>Replaced_by_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Replaced by 2</label>
    <referenceTo>Plant__c</referenceTo>
    <relationshipLabel>Plants (Replaced by 2)</relationshipLabel>
    <relationshipName>Plants1</relationshipName>
    <type>Lookup</type>
</CustomField>