unpackaged/main/default/objects/Plant__c/fields/Squid_Plant_Id__c.field-meta.xml
<CustomField>
    <fullName>Squid_Plant_Id__c</fullName>
    <label>Squid Plant Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>