unpackaged/main/default/objects/Plant__c/fields/Test_Demo__c.field-meta.xml
<CustomField>
    <fullName>Test_Demo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to identify plants created in production for demo or testing</description>
    <label>Test/Demo</label>
    <type>Checkbox</type>
</CustomField>