unpackaged/main/default/objects/Plant__c/fields/Timezone__c.field-meta.xml
<CustomField>
    <fullName>Timezone__c</fullName>
    <label>Timezone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Morocco Standard Time</fullName>
            </value>
            <value>
                <fullName>Coordinated Universal Time</fullName>
            </value>
            <value>
                <fullName>GMT Standard Time</fullName>
            </value>
            <value>
                <fullName>Greenwich Standard Time</fullName>
            </value>
            <value>
                <fullName>W. Europe Standard Time</fullName>
            </value>
            <value>
                <fullName>Central Europe Standard Time</fullName>
            </value>
            <value>
                <fullName>Romance Standard Time</fullName>
            </value>
            <value>
                <fullName>Central European Standard Time</fullName>
            </value>
            <value>
                <fullName>W. Central Africa Standard Time</fullName>
            </value>
            <value>
                <fullName>Namibia Standard Time</fullName>
            </value>
            <value>
                <fullName>Jordan Standard Time</fullName>
            </value>
            <value>
                <fullName>GTB Standard Time</fullName>
            </value>
            <value>
                <fullName>Middle East Standard Time</fullName>
            </value>
            <value>
                <fullName>Egypt Standard Time</fullName>
            </value>
            <value>
                <fullName>Syria Standard Time</fullName>
            </value>
            <value>
                <fullName>South Africa Standard Time</fullName>
            </value>
            <value>
                <fullName>FLE Standard Time</fullName>
            </value>
            <value>
                <fullName>Turkey Standard Time</fullName>
            </value>
            <value>
                <fullName>Jerusalem Standard Time</fullName>
            </value>
            <value>
                <fullName>E. Europe Standard Time</fullName>
            </value>
            <value>
                <fullName>Arabic Standard Time</fullName>
            </value>
            <value>
                <fullName>Kaliningrad Standard Time</fullName>
            </value>
            <value>
                <fullName>Arab Standard Time</fullName>
            </value>
            <value>
                <fullName>E. Africa Standard Time</fullName>
            </value>
            <value>
                <fullName>Iran Standard Time</fullName>
            </value>
            <value>
                <fullName>Arabian Standard Time</fullName>
            </value>
            <value>
                <fullName>Azerbaijan Standard Time</fullName>
            </value>
            <value>
                <fullName>Russian Standard Time</fullName>
            </value>
            <value>
                <fullName>Mauritius Standard Time</fullName>
            </value>
            <value>
                <fullName>Georgian Standard Time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>