unpackaged/main/default/objects/Plant__c/fields/Type_of_Devices__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Devices__c</fullName>
    <label>Type of Devices</label>
    <length>255</length>
    <type>Text</type>
</CustomField>