unpackaged/main/default/objects/Plant__c/fields/X3MW_Legacy_ID__c.field-meta.xml
<CustomField>
    <fullName>X3MW_Legacy_ID__c</fullName>
    <externalId>true</externalId>
    <label>3MW Legacy ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>