unpackaged/main/default/objects/Plant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Asset_Class__c</columns>
    <columns>Plant_Number__c</columns>
    <columns>Operational_Status__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>